--- a/public/swagger.html
+++ b/public/swagger.html
@@ -13,7 +13,7 @@
   <script>
     window.onload = () => {
       SwaggerUIBundle({
-        url: "https://solifess.vercel.app/swagger.json",
+        url: "https://unandfess.vercel.app/swagger.json",
         dom_id: '#swagger-ui',
         presets: [
           SwaggerUIBundle.presets.apis,
